# axum-oidc-youtube

./: .env.sample  Cargo.toml  compose.infra.yml
migrations/: 0001_initial.up.sql
src/: db.rs  env.rs  error.rs  main.rs  openapi.rs  web.rs
src/auth/: mod.rs
src/auth/controller/: callback.rs  login.rs
src/auth/model/: mod.rs
src/auth/utils/: oidc.rs
src/user/: mod.rs
src/user/controller/: profile.rs
src/user/model/: mod.rs
